fix: address vertical alignment issues and screen real-estate issues on small screen

--- a/src/components/DashboardsBar/InformationBlock/styles/ActionsBar.module.css
+++ b/src/components/DashboardsBar/InformationBlock/styles/ActionsBar.module.css
@@ -1,12 +1,18 @@
-.actions {
+.actions,
+.hideOnSmallScreen {
     display: flex;
     gap: var(--spacers-dp4);
-    padding: 0 var(--spacers-dp8);
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.actions {
+    padding-right: var(--spacers-dp8);
 }
 
 @media only screen and (max-width: 480px) {
-    .actions .editButton,
-    .actions .shareButton {
+    .hideOnSmallScreen {
         display: none;
     }
 }
