--- a/src/components/DashboardsBar/InformationBlock/styles/InformationBlock.module.css
+++ b/src/components/DashboardsBar/InformationBlock/styles/InformationBlock.module.css
@@ -1,13 +1,16 @@
 .container {
     display: flex;
-    justify-content: space-between;
     flex-grow: 1;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
 }
 
 .titleContainer {
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100%;
     padding: 0 var(--spacers-dp8) 0 var(--spacers-dp12);
     gap: var(--spacers-dp4);
 }
@@ -15,7 +18,7 @@
 .title {
     font-family: 'Roboto';
     font-size: 16px;
-    line-height: 19px;
+    line-height: 16px;
     font-weight: 500;
     margin: 0;
     color: var(--colors-grey900);
