--- a/src/components/DashboardsBar/styles/DashboardsBar.module.css
+++ b/src/components/DashboardsBar/styles/DashboardsBar.module.css
@@ -10,8 +10,7 @@
     display: flex;
     flex-shrink: 0;
     gap: var(--spacers-dp4);
-    padding: var(--spacers-dp8) var(--spacers-dp12) var(--spacers-dp8)
-        var(--spacers-dp8);
+    padding: var(--spacers-dp8) var(--spacers-dp12) 9px var(--spacers-dp8);
     border-inline-end: 1px solid var(--colors-grey400);
 }
 
